# nuclei_detection

./: .gitignore  README.md  main.py  pyproject.toml
nuclei_detection/: dataset.py  evaluation.py  loader.py  model.py  training.py  utils.py
scripts/: evaluate_model.py  explore_dataset.py  generate_mask.py  train_model.py
