[project]
name = "primaa"
version = "0.1.0"
description = "Nuclei detection using ML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openslide-bin>=4.0.0.8",
    "openslide-python>=1.4.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchvision>=0.19.0",
]
